# frost-sig

./: .gitignore  1.json  2.jso  2.json  3.json  Cargo.toml  README.md  config.json  sign_1.json  sign_2.json  sign_3.json  wallet.json
benches/: keygen.rs  sign.rs
doc/assets/: frost-server.drawio
src/: client.rs  frost.rs  keygen.rs  lib.rs  main.rs  message.rs  modular.rs  nano.rs  preprocess.rs  schnorr.rs  server.rs  shamir.rs  sign.rs  sss.rs  tcp.rs  test.rs
