[package]
name = "frost-sig"
version = "0.0.1"
edition = "2021"
description = "A threshold signature library that implements the FROST protocol."
license = "MIT"
repository = "https://github.com/diogogomesaraujo/thresh"
categories = ["cryptography"]
keywords = ["frost", "threshold", "schnorr"]
readme = "README.md"

[dependencies]
futures = "0.3.31"
rand = "0.9.0"
rug = "1.27.0"
sha256 = "1.6.0"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.17"
tokio-util = { version = "0.7.14", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
# reqwest = { version = "0.12.12", features = ["json"] }
# serde = { version = "1.0.218", features = ["derive"] }
# serde_json = "1.0.139"
# blake2 = "0.10.6"
