[package]
name = "frost-sig"
version = "0.0.1"
edition = "2021"
description = "A threshold signature library that implements the FROST protocol."
license = "MIT"
repository = "https://github.com/diogogomesaraujo/thresh"
categories = ["cryptography"]
keywords = ["frost", "threshold", "schnorr"]
readme = "README.md"

[dependencies]
futures = "0.3.31"
rand = "0.8.0" # to remove
rug = "1.27.0" # to remove
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.17"
tokio-util = { version = "0.7.14", features = ["full"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
curve25519-dalek = { version = "4", features = [
    "rand_core",
    "digest",
    "serde",
] }
sha2 = "0.10.8"
sha256 = "1.6.0"
# reqwest = { version = "0.12.12", features = ["json"] }
# blake2 = "0.10.6"
