[package]
name = "frost-sig"
version = "0.0.1"
edition = "2021"
description = "A threshold signature library that implements the FROST protocol."
license = "MIT"
repository = "https://github.com/diogogomesaraujo/frost-sig"
categories = ["cryptography"]
keywords = ["frost", "cryptography", "signature"]
readme = "README.md"

[dependencies]
curve25519-dalek = { version = "4", features = [
    "rand_core",
    "digest",
    "serde",
] }
# numbers
blake2 = "0.10.6"
rug = "1.27.0"
ed25519-dalek-blake2b = "1.0.2"
primitive-types = "0.13.1"
rand = "0.8.0"

# async runtime
futures = "0.3.31"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.17"
tokio-util = { version = "0.7.14", features = ["full"] }

# serialization
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
hex = "0.4.3"

# http
reqwest = { version = "0.12.15", features = ["json"] }

# bench
[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "keygen"
harness = false

[[bench]]
name = "sign"
harness = false
